# nonebot_plugin_webui_baize

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_webui_baize/: __init__.py  app.py  auth.py  config_editor.py  log_bridge.py  templates.py
nonebot_plugin_webui_baize/screenshots/: screenshots.json
